# cardsagainst

./: .gitignore  Dockerfile  README.md  config.py  dao.py  db.py  dependencies.py  docker-compose-dev.yaml  docker-compose.yaml  lobby.py  main.py  member.py  models.py  pyproject.toml  state_machine.py  states.py
.github/workflows/: deploy.yml
cardsagainst/: deck.py  exceptions.py  game.py  lobby.py  profile.py  settings.py
cardsagainst_backend/: config.py  dao.py  db.py  dependencies.py  integration.py  main.py  models.py
configs/: default.toml  test.toml
tests/: conftest.py  test_database.py  test_lobby.py  test_start_game_service.py  test_states.py
