[tool.poetry]
name = "projects"
version = "0.1.0"
description = ""
authors = ["amolodykh <a.molodykh@bestdoctor.ru>"]
readme = "README.md"

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning:urllib3.*"]
default_async_timeout = 120

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
pydantic = "^2.4.2"
black = "^23.10.0"
uvicorn = "^0.23.2"
websockets = "^12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
alt-pytest-asyncio = ">=0.7.1,^0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
