[tool.poetry]
name = "cardsagainst"
version = "1.0.0"
description = "Online game"
authors = [
    "amolodykh <antonmolodykh96@gmail.com>",
    "Yuriy Kehter <yuriy.kehter+420cards@gmail.com>"
]
readme = "README.md"
packages = [
    { include = "cardsagainst" },
    { include = "cardsagainst_backend" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
pydantic = "^2.7.3"
uvicorn = "^0.30.1"
websockets = "^12.0"
sqlalchemy = "^2.0.28"
asyncpg = "^0.29.0"
dynaconf = "^3.2.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
alt-pytest-asyncio = ">=0.7.1,^0"
# TODO: Перейти на ruff
black = "^23.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
